--- a/frontend/src/app/film-kartica/film-kartica.component.html
+++ b/frontend/src/app/film-kartica/film-kartica.component.html
@@ -1,1 +1,7 @@
-<p>film-kartica works!</p>
+<div class="film-kartica">
+    <img src="https://paperandinkprinting.com/wp-content/uploads/2019/08/canstockphoto22402523-arcos-creator.com_-1024x1024.jpg">
+    <p>Title</p>
+    <p>Director</p>
+    <p>Actors: Pepe i Kris</p>
+    <button>Rezervisi</button>
+</div>
