--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -322,6 +322,7 @@
       </div>
     </div>
   </div>
+  <app-film-kartica></app-film-kartica>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
